--- a/css/style.css
+++ b/css/style.css
@@ -410,11 +410,20 @@ span {
     background: var(--bg-color);
     border-top: .1rem solid rgba(0, 0, 0, .2);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
   }
 
   .navbar a {
     display: block;
     font-size: 2rem;
     margin: 3rem 0;
+  }
+
+  .home {
+    flex-direction: column;
   }
 }
