finished skills section

--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,7 @@ span {
 
 .portfolio-box img {
   width: 100%;
+  height: 33rem;
   transition: .5s ease;
 }
 
@@ -462,7 +463,7 @@ span {
     padding: 10rem 3% 2rem;
   }
 
-  .services {
+  .skills {
     padding-bottom: 7rem;
   }
 
@@ -526,12 +527,21 @@ span {
     flex-direction: column-reverse;
   }
 
+  .skills-container {
+    grid-template-columns: 1fr;
+  }
+
   .about img {
     width: 70vw;
     margin-top: 4rem;
   }
 
-  .services h2 {
+  .skills-img img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .skills h2 {
     margin-bottom: 3rem;
   }
 
@@ -566,6 +576,10 @@ span {
   }
 
   .about-img img {
+    width: 80vw;
+  }
+
+  .skills-img img {
     width: 80vw;
   }
 
